# Roomba-Robot

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/: Walker.hpp
launch/: SimLauncher.launch
results/: cppcheck_output  cpplint_output
src/: Walker.cpp  main.cpp
